--- a/css/style.css
+++ b/css/style.css
@@ -589,7 +589,7 @@ width: 250px;
             .bungkusutama{
                 display: grid;
                 grid-template-columns: repeat(1, 1fr);
-                padding-left: 1rem;
+                margin-left: 4rem;
             }
             .card2,.card4{
                 margin-top:25px;
