--- a/css/style.css
+++ b/css/style.css
@@ -574,15 +574,11 @@ width: 250px;
         padding-left: 0px;
     }
     }
-    @media screen and (max-width: 688px) {
+    @media screen and (max-width: 765px) {
         .bungkusutama{
-            margin-left: 3rem;
-        }
-        .card4,.card2{
-            margin-left: -1rem;
-        }
-        .card1,.card3{
-            margin-left: 1rem;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            margin-left: 80px;
         }
         }
         @media screen and (max-width: 414px) {
@@ -594,44 +590,32 @@ width: 250px;
             .card2,.card4{
                 margin-top:25px;
                 margin-bottom:1rem;
-                margin-left: 1rem;
+                margin-left: 2rem;
+            }
+            .card1{
+                margin-left: 2rem;
+            }
+            .card3{
+                margin-left: 2rem;
             }
         }
-        
+
             @media screen and (max-width: 395px) {
                 .bungkusutama{
                     display: grid;
                     grid-template-columns: repeat(1, 1fr);
-                }
-                .card2,.card4{
-                    margin-top:25px;
-                    margin-bottom:1rem;
-                    margin-left: 1rem;
+                    margin-left: 45px;
                 }
             }
-            @media screen and (max-width: 765px) {
-                .bungkusutama{
-                    display: grid;
-                    grid-template-columns: repeat(1, 1fr);
-                    padding-left: 2px;
-                }
-                .card2,.card4{
-                    margin-top:1rem;
-                    margin-bottom:1rem;
-                }
-                }
                 
                 @media screen and (max-width: 365px) {
                     .bungkusutama{
                         display: grid;
                         grid-template-columns: repeat(1, 1fr);
-                        padding-left: 2px;
-                    }
-                    .card2,.card4{
-                        margin-top:1rem;
-                        margin-bottom:1rem;
+                        margin-left: 30px;
                     }
                     }
+                    
 
 /* ============ end about me ========= */
 
